# aoc2023

./: README.md  config.yaml  pyproject.toml
src/day_1/: PROBLEM.md  solve.py
src/day_2/: PROBLEM.md  solve.py
src/day_3/: PROBLEM.md  solve.py  solve_part1.py  solve_part2.py
src/day_n/: PROBLEM.md  solve.py
src/utils/: io.py
